# subscribe-jpsubreddits

./: .gitignore  subscribe-jpsubreddits.cabal
src/: Main.hs
src/JPSubreddits/: Types.hs
src/Reddit/: Types.hs
src/Subscriber/: Generate.hs
