name:                subscribe-jpsubreddits
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              sifisifi
maintainer:          sifisifi.rns@gmail.com
copyright:           (c) 2015 sifisifi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable subscribe-jpsubreddits
  main-is: Main.hs
  --other-modules:

  build-depends: base             >= 4.7 && < 5
               , aeson            >= 0.6 && < 1.0
               , bytestring       >= 0.10
               , conduit          == 1.2.*
               , http-conduit     == 2.1.*
               , lifted-base
               , shakespeare      >= 2.0 && < 3.0
               , text             >= 1.0 && < 2.0
               , time
               , transformers     >= 0.3

  hs-source-dirs: src
  default-language: Haskell2010
